--- a/UC2_BridgeLabzLogo/package.json
+++ b/UC2_BridgeLabzLogo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uc1-hello-world",
+  "name": "uc2-bridge-labz-logo",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:UC1_HelloWorld": "node dist/uc1-hello-world/server/server.mjs"
+    "serve:ssr:UC2_BridgeLabzLogo": "node dist/uc2-bridge-labz-logo/server/server.mjs"
   },
   "private": true,
   "dependencies": {
